--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1006,8 +1006,154 @@ footer.copyright .label {
 /* END FOOTER */
 
 
+/* SECTION DETAIL */
+section.detail {
+    display: grid;
+    grid-template-columns: 0.825fr 1.125fr;
+    padding: 0 182px 82px 182px;
+    gap: 60px;
+}
+
+section.detail .wrapper-image {
+    padding: 24px;
+    background-color: rgba(var(--dark-color), 0.04);
+    height: fit-content;
+    border-radius: 6px;
+}
+
+section.detail .detail-product {
+    width: 100%;
+    border-radius: 4px;
+}
+
+section.detail .detail-price {
+    font-size: 1.25rem;
+    font-family: var(--space-grotesk-bold);
+    color: rgba(var(--primary-color), 1);
+    margin-bottom: 18px;
+}
+
+section.detail .title {
+    margin-bottom: 22px;
+}
+
+section.detail .paragraph {
+    font-size: 0.913rem;
+    line-height: 150%;
+    margin-bottom: 20px;
+    color: rgba(var(--dark-color), 0.52);
+}
+
+section.detail ul li {
+    font-size: 0.913rem;
+    line-height: 150%;
+    color: rgba(var(--dark-color), 0.52);
+}
+
+section.detail form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 100%;
+}
+
+section.detail form .input-group {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    width: 100%;
+}
+
+section.detail form .input-group label {
+    font-size: 0.875rem;
+    color: rgba(var(--dark-color), 1);
+}
+
+section.detail form .input-group .input {
+    font-size: 0.875rem;
+    color: rgba(var(--dark-color), 0.52);
+    padding: 15px;
+    border-radius: 4px;
+    border: 1px solid rgba(var(--dark-color), 0.12);
+    stroke: none;
+    outline: none;
+    background-color: rgba(var(--dark-color), 0.04);
+}
+
+section.detail form .input-group .input::placeholder {
+    font-size: 0.875rem;
+    color: rgba(var(--dark-color), 0.52);
+}
+
+section.detail form .input-group .caption {
+    font-size: 0.875rem;
+    color: rgba(var(--dark-color), 0.52);
+}
+
+section.detail form .button-packaging {
+    position: relative;
+    width: 110px;
+    background-color: rgba(var(--light-color), 1);
+    border: 1px solid rgba(var(--dark-color), 0.12);
+    border-radius: 4px;
+    padding: 12px 0;
+    text-align: center;
+    cursor: pointer;
+}
+
+section.detail form .button-packaging input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -90;
+    opacity: 0;
+}
+
+section.detail form .button-packaging span {
+    color: rgba(var(--dark-color), 1);
+    position: relative;
+}
+
+section.detail form .button-packaging input:checked ~ span {
+    color: rgba(var(--primary-color), 1);
+}
+
+section.detail form .wrapper-packaging {
+    display: flex;
+    gap: 10px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid rgba(var(--dark-color), 0.12);
+}
+
+section.detail .button-primary {
+    margin-top: 0;
+    cursor: pointer;
+    width: 100%;
+    display: inline-block;
+}
+
+section.detail .button-primary:hover {
+    color: rgba(var(--primary-color), 1);
+    background-color: transparent;
+    border-color: rgba(var(--primary-color), 1);
+}
+/* END SECTION DETAIL */
+
+
+/* SECTION OTHER PRODUCT */
+.other-product {
+    padding-top: 92px;
+    border-top: 1px solid rgba(var(--dark-color), 0.12);
+}
+/* END SECTION OTHER PRODUCT */
+
+
 /* RESPONSIVE */
 @media (max-width: 1399.98px) {
+    section.detail {
+        padding: 0 142px 82px 142px;
+    }
+
     section.testimonial .container,
     section.about .container {
         gap: 92px;
@@ -1019,6 +1165,10 @@ footer.copyright .label {
 }
 
 @media (max-width: 1199.98px) {
+    section.detail {
+        padding: 0 100px 82px 100px;
+    }
+
     footer.footer .footer-profile {
         padding-right: 62px;
     }
@@ -1047,6 +1197,14 @@ footer.copyright .label {
 }
 
 @media (max-width: 991.98px) {
+    section.detail .wrapper-image {
+        padding: 12px;
+    }
+
+    section.detail {
+        padding: 0 32px 82px 32px;
+    }
+
     footer.footer .footer-profile {
         padding-right: 0;
     }
@@ -1081,6 +1239,14 @@ footer.copyright .label {
 }
 
 @media (max-width: 575.98px) {
+    section.detail .wrapper-image {
+        display: none;
+    }
+
+    section.detail {
+        padding: 0 16px 42px 16px;
+    }
+
     footer.footer {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -1098,6 +1264,10 @@ footer.copyright .label {
 
     .section-gap-small {
         margin-top: 42px;
+    }
+
+    .other-product {
+        padding-top: 42px;
     }
     
     .content-gap {
